# lropt_experiments

./: .gitignore  README.md  facility.ipynb  pyproject.toml  reshaped_table.csv  standard_table.csv  tutorial_deterministic.ipynb  utils.py
intro_new_visual/: intro_new.ipynb
inventory/: gen_csv.py  inv.py  inv_dro.py  inv_dro_sep.py  make_dir.py  plot_8.py
inventory_management copy/: Ar_saved.npy  Ar_saved1000.npy  Ar_saved300.npy  Ar_saved8.npy  Inventory copy.ipynb  Inventory copy1.ipynb  Inventory.ipynb  br_saved1000.npy  br_saved300.npy  br_saved8.npy  bs_saved300.npy  dfre_2.pkl  dfre_8.pkl  dfst_8.pkl  reshaped_table.csv  reshaped_table8.csv  scenarios.npy  standard_table.csv  standard_table1000.csv  standard_table300.csv  standard_table8.csv  totalobjs2.npy  totaltime2.npy  totalvios2.npy
inventory_management_notebooks/: As_saved.npy  Inventory copy.ipynb  Inventory copy1.ipynb  br_saved.npy  dfre_4.pkl  dfst_2.pkl  dfst_4.pkl  reshaped_table1000.csv  reshaped_table300.csv  totalvios_train2.npy
multi_port/: debug.py  markowitz_tuning.ipynb  multi_port.ipynb  utils.py
multistage_inv/: inventory.ipynb  inventory_aro_demand.ipynb  inventory_aro_train.ipynb  inventory_lookahead.ipynb  inventory_simplified.ipynb  inventory_simplified_aro.ipynb  inventory_test.py
news_intro/: gen_csv.py
newsvendor copy/: A_fin.npy  Ar_saved.npy  Ar_saved3.npy  Ar_saved4.npy  Ar_saved5.npy  Ar_saved6.npy  Ar_saved7.npy  Ar_saved8.npy  Larger_newsvendor.ipynb  News_intro_orig.ipynb  Newsvendor_intro_orig copy 2.ipynb  Newsvendor_intro_orig.ipynb  b_fin.npy  br_saved.npy  (+29 more)
(+167948 files in other folders)
